--- a/public/index.html
+++ b/public/index.html
@@ -6,92 +6,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gerador de Flyer</title>
   <style>
-    body {
-      font-family: 'Arial', sans-serif;
-      line-height: 1.6;
-      color: #333;
-      max-width: 600px;
-      margin: 0 auto;
-      padding: 20px;
-      background-color: #f4f4f4;
-    }
-    h1 {
-      text-align: center;
-      color: #2c3e50;
-      margin-bottom: 30px;
-    }
     form {
-      background-color: #fff;
-      padding: 30px;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
-    .form-group {
-      margin-bottom: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      max-width: 300px;
+      margin: 0 auto;
     }
     label {
-      display: block;
-      margin-bottom: 5px;
-      color: #2c3e50;
       font-weight: bold;
-    }
-    input[type="text"],
-    input[type="file"],
-    select {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      font-size: 16px;
-    }
-    input[type="file"] {
-      padding: 10px 0;
-    }
-    select {
-      appearance: none;
-      -webkit-appearance: none;
-      -moz-appearance: none;
-      background-image: url('data:image/svg+xml;utf8,<svg fill="%23333" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/><path d="M0 0h24v24H0z" fill="none"/></svg>');
-      background-repeat: no-repeat;
-      background-position: right 10px top 50%;
-    }
-    button {
-      display: block;
-      width: 100%;
-      padding: 12px;
-      background-color: #3498db;
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      font-size: 18px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-    button:hover {
-      background-color: #2980b9;
     }
   </style>
 </head>
 <body>
-  <h1>Gerador de Flyer</h1>
-  <form id="flyerForm" enctype="multipart/form-data">
-    <div class="form-group">
+  <h1>Upload de Imagens para Flyer</h1>
+  <form action="/upload" method="post" enctype="multipart/form-data">
+    <div>
       <label for="mainImage">Imagem Principal:</label>
       <input type="file" id="mainImage" name="mainImage" accept="image/*" required />
     </div>
-    <div class="form-group">
+    <div>
       <label for="topImage">Imagem do Topo:</label>
       <input type="file" id="topImage" name="topImage" accept="image/*" required />
     </div>
-    <div class="form-group">
+    <div>
       <label for="bottomText">Texto do Rodapé:</label>
       <input type="text" id="bottomText" name="bottomText" required />
     </div>
-    <div class="form-group">
-      <label for="additionalText">Data do evento:</label>
+    <div>
+      <label for="additionalText">Texto Adicional:</label>
       <input type="text" id="additionalText" name="additionalText" required />
     </div>
-    <div class="form-group">
+    <div>
       <label for="fontType">Tipo de Fonte:</label>
       <select id="fontType" name="fontType">
         <option value="Arial">Arial</option>
@@ -101,30 +47,27 @@
         <option value="Verdana">Verdana</option>
       </select>
     </div>
-    <div class="form-group">
+    <div>
       <label for="rightCenterText">Texto Central Direita:</label>
       <input type="text" id="rightCenterText" name="rightCenterText" value="Balde de Cerveja a R$ 50,00" />
     </div>
-    <div class="form-group">
+    <div>
       <label for="rightBottomText">Texto Inferior Direita:</label>
       <input type="text" id="rightBottomText" name="rightBottomText" value="Mulher não paga!" />
     </div>
-    <div class="form-group">
+    <div>
       <label for="rightTopText">Texto Superior Direita:</label>
       <input type="text" id="rightTopText" name="rightTopText" value="17 de Maio" />
     </div>
-    <div class="form-group">
+    <div>
       <label for="leftText">Texto à Esquerda:</label>
       <input type="text" id="leftText" name="leftText" value="Tekila a R$ 5,00" />
     </div>
-    <div class="form-group">
+    <div>
       <label for="leftBottomText">Texto Inferior Esquerda:</label>
       <input type="text" id="leftBottomText" name="leftBottomText" value="Texto Inferior Esquerda" />
     </div>
     <button type="submit">Gerar Flyer</button>
   </form>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/browser-image-compression/2.0.0/browser-image-compression.js"></script>
-  <script src="/js/compress.js"></script>
 </body>
 </html>
